--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,15 @@
+<div class="row">
 <% unless logged_in? %>
-  <h2><a href="/login"> Please Login</a></h2>
-<% else %>
-  <h2>Hello <%=current_user['email']%></h2>
-  <p>
+  <div class="center-block">
+    <div class="well">
+      <a href="/login" role="button" class="btn btn-success btn-lg btn-block"> Please Login</a></h2>
+    </div>
+  </div>
 
-  </p>
+<% else %>
+  <div class="center-block">
+    <h2>Hello <%=current_user['email']%></h2>
+  </div>
 <% end %>
 
+</div>
