--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,7 +22,14 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/transactions">Transactions</a></li>
-            <li><a href="/transfers">Transfers</a></li>
+            <li class="dropdown">
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Transfers <span class="caret"></span></a>
+               <ul class="dropdown-menu" role="menu">
+                 <li><a href="/sepa_credit_transfers">Sepa Credit Transfers</a></li>
+                 <li><a href="/internal_transfers">Fidor Internal Transfers</a></li>
+               </ul>
+             </li>
+
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if logged_in? %>
