--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,17 +20,25 @@
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/transactions">Transactions</a></li>
-            <li class="dropdown">
-               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Transfers <span class="caret"></span></a>
-               <ul class="dropdown-menu" role="menu">
-                 <li><a href="/sepa_credit_transfers">Sepa Credit Transfers</a></li>
-                 <li><a href="/internal_transfers">Fidor Internal Transfers</a></li>
-               </ul>
-             </li>
-
-          </ul>
+          <% if logged_in? %>
+            <ul class="nav navbar-nav">
+              <li><a href="/transactions">Transactions</a></li>
+              <li class="dropdown">
+                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Transfers <span class="caret"></span></a>
+                 <ul class="dropdown-menu" role="menu">
+                   <li><a href="/sepa_credit_transfers">Sepa Credit Transfers</a></li>
+                   <li><a href="/internal_transfers">Fidor Internal Transfers</a></li>
+                 </ul>
+               </li>
+              <li class="dropdown">
+                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Send Money <span class="caret"></span></a>
+                 <ul class="dropdown-menu" role="menu">
+                   <li><a href="/sepa_credit_transfers/new">New Sepa Transfer</a></li>
+                   <li><a href="/internal_transfers/new">New Fidor Internal Transfer</a></li>
+                 </ul>
+               </li>
+            </ul>
+          <% end %>
           <ul class="nav navbar-nav navbar-right">
             <% if logged_in? %>
               <li class="navbar-text"><%= current_user['email'] %></li>
@@ -40,9 +48,7 @@
             <% end %>
           </ul>
         </div>
-
       </div>
-
     </nav>
 
     <div class="container">
