POST create internal transfers, add a simple flash message system

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -52,6 +52,7 @@
     </nav>
 
     <div class="container">
+      <% if @flash %> <div class="alert alert-info"><%= @flash %></div> <% end %>
       <%= yield %>
     </div>
 
