--- a/views/sepa_credit_transfers.erb
+++ b/views/sepa_credit_transfers.erb
@@ -1,7 +1,7 @@
 <% if @error %>
-  <p class="alert alert-danger">
+  <div class="alert alert-danger">
     <%= @error%>
-  </p>
+  </div>
 <% else %>
   <table class="table">
     <thead>
@@ -31,5 +31,4 @@
     <% end %>
     </tbody>
   </table>
-
-<% end%>
+<% end %>
