--- a/views/sepa_credit_transfers.erb
+++ b/views/sepa_credit_transfers.erb
@@ -3,6 +3,17 @@
     <%= @error%>
   </div>
 <% else %>
+  <form accept-charset="UTF-8" action="../sepa_credit_transfers" class="well form-horizontal" method="get">
+    <div class="control-group">
+      <label class="control-label">Created at</label>
+      <div class="controls">
+        <input class="form-control" name="filter[created_at_from]" placeholder="YYYY-MM-DD" value="<%= @filter ? @filter['created_at_from'] : nil %>" >
+        To
+        <input class="form-control" name="filter[created_at_to]" placeholder="YYYY-MM-DD" value="<%= @filter ? @filter['created_at_to'] : nil %>" >
+        <button type="submit" class="btn btn-default">Search</button>
+      </div>
+    </div>
+  </form>
   <table class="table">
     <thead>
       <th>ID</th>
