--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,7 +36,14 @@
                    <li><a href="/sepa_credit_transfers/new">New Sepa Transfer</a></li>
                    <li><a href="/internal_transfers/new">New Fidor Internal Transfer</a></li>
                  </ul>
-               </li>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Get Money<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="/sepa_mandates">Sepa Mandates</a></li>
+                  <li><a href="/sepa_mandates/new">New Sepa Mandate</a></li>
+                </ul>
+              </li>
             </ul>
           <% end %>
           <ul class="nav navbar-nav navbar-right">
